[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_java_syntax"
repository.workspace = true
version              = "0.5.7"

[dependencies]

[lints]
workspace = true
